--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "sass-local": "npx sass sass/styles.scss css/styles.css --watch",
+    "sass-prod": "npx sass sass/styles.scss css/styles.css"
   },
   "keywords": [],
   "author": "",
